# pybind-tutorial

./: .gitignore  .gitmodules
00_hello_pybind11/: CMakeLists.txt  readme.md
01_basics/: CMakeLists.txt  readme.md
01_pybind11_project_organization/: readme.md
01_pybind11_project_organization/recepi_01/: CMakeLists.txt  readme.md
01_pybind11_project_organization/recepi_02/: CMakeLists.txt
01_pybind11_project_organization/recepi_02/sublibrary/: CMakeLists.txt
01_pybind11_project_organization/recepi_03/recepi_03_a/: CMakeLists.txt
01_pybind11_project_organization/recepi_03/recepi_03_a/subbinary/: CMakeLists.txt  main.cpp
01_pybind11_project_organization/recepi_03/recepi_03_a/sublibrary/: CMakeLists.txt
01_pybind11_project_organization/recepi_03/recepi_03_a/sublibrary/src/: basics.cpp
01_pybind11_project_organization/recepi_03/recepi_03_b/: readme.md
01_pybind11_project_organization/recepi_03/recepi_03_b/subbinary/: main.cpp
01_pybind11_project_organization/recepi_03/recepi_03_b/sublibrary/include/sublibrary/: basics.h
01_pybind11_project_organization/recepi_03/recepi_03_b/sublibrary/src/: basics.cpp
01_pybind11_project_organization/recepi_03/recepi_03_c/: readme.md
01_pybind11_project_organization/recepi_03/recepi_03_c/subbinary/: main.cpp
01_pybind11_project_organization/recepi_03/recepi_03_c/sublibrary/: CMakeLists.txt
01_pybind11_project_organization/recepi_03/recepi_03_d/: CMakeLists.txt
01_pybind11_project_organization/recepi_03/recepi_03_d/sublibrary/: CMakeLists.txt
01_pybind11_project_organization/recepi_03/recepi_03_d/sublibrary/include/sublibrary/: basics.h
01_pybind11_project_organization/recepi_03/recepi_03_d/sublibrary/src/: basics.cpp  basics_binding.cpp
02_classes/: test.py
02_deep_use_pybind11/01_basics/: CMakeLists.txt  basics.cpp  test.py
02_deep_use_pybind11/02_classes/: CMakeLists.txt  classes.cpp
02_deep_use_pybind11/classes_child/: CMakeLists.txt  animals.cpp  readme.md
classes_child/: test.py
